ajout de displayOrNot dans IHM

--- a/main.html
+++ b/main.html
@@ -238,10 +238,12 @@
 						<input type="radio" value="prem">
 						En premier
 					</label>
+					<br>
 					<label class="radio">
 						<input type="radio" value="milieu">
 						Au milieu
 					</label>
+					<br>
 					<label class="radio"><!-- disabled-->
 						<input type="radio" value="dern"><!-- disabled-->
 						En dernier
@@ -261,9 +263,14 @@
 
 			<!-- ------------------------------------------------ -->
 
-			<fieldset class="border-primary field">
-				<legend>Ajouter de la couleur</legend>
-				<input type="color" id="colorWell" value="#e66465">
+			<fieldset class="border-primary field" id="color">
+				<legend>Modifier la couleur</legend>
+				<input type="color" id="color09" value="#e66465">
+				<input type="color" id="color08" value="#e66465">
+				<input type="color" id="color07" value="#e66465">
+				<input type="color" id="color06" value="#e66465">
+				<input type="color" id="color05" value="#e66465">
+				<input type="color" id="color04" value="#e66465">
 			</fieldset>
 		</div>
 	</div>
