dynamic False color ver0.1

--- a/main.html
+++ b/main.html
@@ -237,7 +237,7 @@
 	<div id=contenu1>
 		<canvas id="WebGL-test" style="border:none;" width="600" height="600"></canvas>
 		<br><br>
-		<button type="button" onclick="loadShaders('shader')">Load Shaders</button>
+		<button type="button" onclick="loadAShaders()">Load Shaders</button>
 	</div>
 
 	<div id=contenu2 class="card border-primary mb-3" style="max-width: 20rem;">
