--- a/main.html
+++ b/main.html
@@ -281,7 +281,7 @@
 
 			<fieldset class="border-primary field">
 				<legend>Faire varier la transparence</legend>
-				<input id="sliderTrans" type="range" value="1" min="0" max="1" step="0.01" oninput="this.nextElementSibling.value = this.value" onchange="transparence(this.value)">
+				<input id="sliderTrans" type="range" value="1" min="0" max="1" step="0.01"  oninput="transparence(this)">
 				<output>1</output>
 			</fieldset>
 
