--- a/main.html
+++ b/main.html
@@ -281,24 +281,7 @@
 
 			<fieldset class="border-primary field">
 				<legend>Faire varier la transparence</legend>
-				<input id="sliderTrans" type="range" value="1" min="0" max="1" step="0.01"  oninput="transparence(this)">
-				<output>1</output>
-			</fieldset>
-
-			<!-- ------------------------------------------------ -->
-
-			<fieldset class="border-primary field">
-				<legend>Faire varier le nombre de frame</legend>
-				Frame Minimum
-				<div id="sliderFrameMin" class="ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content">
-					<div type="range" id="#custom-handleFrameMin" min="0" max="360" class="ui-slider-handle ui-corner-all ui-state-default" onchange="frameMinimum()">0</div>
-				</div>
-				<br>
-				Frame Maximum
-				<div id="sliderFrameMax" class="ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content">
-					<div type="range" id="#custom-handleFrameMax" min="0" max="360" class="ui-slider-handle ui-corner-all ui-state-default" onchange="frameMaximum()" tabindex="0" style="left: 0%;">0</div>
-				</div>
-				<input type="range" value="1" min="0" max="1" step="0.01" oninput="this.nextElementSibling.value = this.value" onchange="frameMaximum()">
+				<input id="sliderTrans" type="range" value="1" min="0" max="1" step="0.01" oninput="transparence(this)">
 				<output>1</output>
 			</fieldset>
 
@@ -310,31 +293,46 @@
 					<input type="checkbox" id ="myCheckbox2" onclick="onoffFrame()">
 					<span class="slider round"></span>
 				</label>
-				Frame Minimum
-				<div id="sliderFrameMin" class="ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content">
-					<div type="range" id="#custom-handleFrameMin" min="0" max="360" class="ui-slider-handle ui-corner-all ui-state-default" onchange="frameMinimum()">0</div>
-				</div>
 				<br>
-				Frame Maximum
-				<div id="sliderFrameMax" class="ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content">
-					<div type="range" id="#custom-handleFrameMax" min="0" max="360" class="ui-slider-handle ui-corner-all ui-state-default" onchange="frameMaximum()" tabindex="0" style="left: 0%;">0</div>
+				<br>
+				<div>
+					<input id="sliderSoloFrame" type="range" disabled="true" min="1" max="360" oninput="singleFrame(this)">
+					<output>1</output>
 				</div>
-				<input type="range" value="1" min="0" max="1" step="0.01" oninput="this.nextElementSibling.value = this.value" onchange="frameMaximum()">
-				<output>1</output>
+			</fieldset>
+
+			<!-- ------------------------------------------------ -->
+
+			<fieldset class="border-primary field" id="nbrFrame">
+				<legend>Faire varier le nombre de frame</legend>
+				Frame Minimum
+				<div id="sliderFrameMin">
+					<input type="range" min="1" max="360" oninput="frameMinimum(this)">
+					<output>1</output>
+				</div>
+				Frame Maximum
+				<div id="sliderFrameMax">
+					<input type="range" min="1" max="360" oninput="frameMaximum(this)">
+					<output>1</output>
+				</div>
 			</fieldset>
 
 			<!-- ------------------------------------------------ -->
 
 			<fieldset class="border-primary field" id="color">
 				<legend>Modifier la couleur</legend>
-				<input type="color" id="color09" value="#e66465">
-				<input type="color" id="color08" value="#e66465">
-				<input type="color" id="color07" value="#e66465">
+
+				<input type="color" id="color09" value="#ff0000" oninput="changeColor(this, 1)">
 				<br>
+				<input type="color" id="color08" value="#0000ff" oninput="changeColor(this, 2)">
 				<br>
-				<input type="color" id="color06" value="#e66465">
-				<input type="color" id="color05" value="#e66465">
-				<input type="color" id="color04" value="#e66465">
+				<input type="color" id="color07" value="#00ff00" oninput="changeColor(this, 3)">
+				<br>
+				<input type="color" id="color06" value="#00ffff" oninput="changeColor(this, 4)">
+				<br>
+				<input type="color" id="color05" value="#ff00ff" oninput="changeColor(this, 5)">
+				<br>
+				<input type="color" id="color04" value="#ffff00" oninput="changeColor(this, 6)">
 			</fieldset>
 
 		</div>
