number of frame Ok

--- a/main.html
+++ b/main.html
@@ -307,13 +307,13 @@
 				<legend>Faire varier le nombre de frame</legend>
 				Frame Minimum
 				<div id="sliderFrameMin">
-					<input type="range" min="1" max="360" oninput="frameMinimum(this)">
+					<input type="range" min="1" max="360" value="1" oninput="frameMinimum(this)">
 					<output>1</output>
 				</div>
 				Frame Maximum
 				<div id="sliderFrameMax">
-					<input type="range" min="1" max="360" oninput="frameMaximum(this)">
-					<output>1</output>
+					<input type="range" min="1" max="360" value="360" oninput="frameMaximum(this)">
+					<output>360</output>
 				</div>
 			</fieldset>
 
