--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="IHM.js"></script>
-	<!-- <script rel="stylesheet" type="text/css" src="CSS.css"></script> -->
+	<!------------------------------------------------------------------->
 
 	<style type="text/CSS">
 		#contenu1 {
@@ -28,48 +28,7 @@
 			text-align:center;
 		}
 
-		#custom-handleFrameMin, #custom-handleFrameMax, #custom-handleTrans {
-			width: 2em;
-			height: 1.5em;
-			text-align: center;
-			line-height: 1.5em;
-			border-radius: 5px;
-		}
-
-		#colorWell {
-			border-radius: 0.25rem;
-			color: #007bff;
-			border: 1px solid transparent;
-			padding: 0.3rem 0.3rem;
-			width: 5em;
-			height : 2em;
-		}
-
-		.ui-widget {
-			border: 1px solid #c5c5c5;
-			font-family: Arial,Helvetica,sans-serif;
-			font-size: 0.9em;
-		}
-
-		.ui-widget-content {
-			border: 1px solid #dddddd;
-			background: #ffffff;
-			color: #333333;
-		}
-
-		.ui-slider-horizontal {
-			height: .8em;
-		}
-
-		.ui-slider {
-			position: relative;
-			margin: 5px 25px;
-			height: 1em;
-			background-color: rgba(0, 0, 0, 0.03);
-			border-radius: 10px;
-		}
-
-		.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
+		.ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default,  html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
 			border: 1px solid #c5c5c5;
 			background: #f6f6f6;
 			font-weight: normal;
@@ -214,7 +173,6 @@
 			box-sizing: border-box;
 		}
 	</style>
-<!------------------------------------------------------------------->
 
 </head>
 
