--- a/main.html
+++ b/main.html
@@ -198,6 +198,14 @@
 
 			<!-- ------------------------------------------------ -->
 
+			<fieldset class="border-primary field" id="valSeuil">
+				<legend>Faire varier le seuil de densité minimale</legend>
+				<input id="sliderSeuil" type="range" value="0.4" min="0" max="1" step="0.01" oninput="valSeuildensité(this)">
+				<output>0.4</output>
+			</fieldset>
+
+			<!-- ------------------------------------------------ -->
+
 			<fieldset class="border-primary field" id="color">
 				<legend>Modifier la couleur</legend>
 
@@ -305,7 +313,7 @@
 			<!-- ------------------------------------------------ -->
 
 			<fieldset class="border-primary field" id="nbrFrame">
-				<legend>Faire varier le nombre de frame</legend>
+				<legend>Faire varier le nombre de frames</legend>
 				Frame Minimum
 				<div id="sliderFrameMin">
 					<input type="range" min="1" max="360" value="1" oninput="frameMinimum(this)">
